[package]
name = "waybackmachinedownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4.5.30", features = ["derive"] }
